--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
-env/
-.vscode
+# dll
 __pycache__/
+*.py[cod]
+*$py.class
+
+# Python Package
+env/
 .Python
 .env
+
+# VSCode
+.vscode/
+
+# Logfiles
+log.*
